package com.bms.strategy.interest;

public interface InterestCalculationStrategy {
    double calculateInterest(double balance);
}